TerraForm-Begginer-Level/Terraform-scripts/securitygroup.tf
# SECURITY GROUPS FOR EC2 INSTANCE #
resource "aws_security_group" "dev_sg" {
    vpc_id = "${aws_vpc.dev_env.id}"
    ingress {
        from_port = 0
        to_port = 65535
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
  tags = {
    Name = "Dev_SG"
  }
}
